test/parsing/vass/wrong-escapes-4.good
wrong-escapes-4.chpl:3: EOF in string
wrong-escapes-4.chpl:3: syntax error
