test/parsing/vass/wrong-escapes-4.chpl

writeln('Wrong backslash 3\\\
